--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             grid-template-columns: repeat(5, 1fr);
             gap: 10px;
             margin-bottom: 20px;
+            margin-left: 20px;
             justify-content: center;
         }
         .cell {
@@ -55,8 +56,8 @@
             font-size: 20px;
             cursor: pointer;
             transition: all 0.3s ease;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
         }
         .cell:hover {
             background-color: #5600e8;
@@ -159,9 +160,9 @@
         </div>
 
         <div class="attribution">
-            Created by Your Name | 
-            <a href="https://www.instagram.com/your_instagram_handle/" target="_blank">
-                <img src="https://example.com/instagram-icon.png" alt="Instagram"> Follow on Instagram
+            Created by Satabda Gogoi | 
+            <a href="https://www.instagram.com/satabdagogoi?igsh=MXZidG1lajZrdHdhdA==" target="_blank">
+                <img src="https://i.postimg.cc/RVy5T2yW/instagram.png" alt="Instagram"> Follow on Instagram
             </a>
         </div>
     </div>
